CASI terminado, css es medio un caos tengo que simplificar más, también algunos htmls pero creo que está todo funcional. Falta agregar algo media querie, ajustar los tamaños para que sean todos iguales, agregar algun video y ajustar cositas

--- a/contact-me.html
+++ b/contact-me.html
@@ -6,20 +6,104 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section class="titulo-principal">
+            <h1 class="titulo-noculture">Let's talk !</h1>
+            <h1 class="titulo-raleway">let's talk !</h1>
+        </section>
+        <section class="contacto-seccion">
+            <h4>
+                you can find me at
+            </h4>
+            <div>
+                <span class="contacto-link"><a href="https://www.behance.net/sofiazambrana"
+                        target="_blank">behance</a></span>
+                <span class="contacto-link"><a href="mailto:sofiazambrana1@gmail.com" target="_blank">mail</a></span>
+                <span class="contacto-link"><a href="https://www.instagram.com/sofothemonster/"
+                        target="_blank">instagram</a></span>
+            </div>
+        </section>
+        <section class="formulario-contacto">
+            <div class="contacto-izquierda">
+                <h4>or leave your details <br> so we can talk =D</h4>
+                <img src="img/asterisco-rojo.svg" class="asterisco-rojo">
+            </div>
+            <form class="contacto-derecha" action="https://formsubmit.co/sofiazambrana1@gmail.com" method="post">
+                <div class="fila-formulario">
+                    <div class="campo-formulario">
+                        <h5 class="sin-margen">Hi, I'm</h5>
+                        <input type="text" name="nombre" placeholder="Write your full name">
+                    </div>
+                    <div class="campo-formulario">
+                        <h5 class="sin-margen">My e-mail is...</h5>
+                        <input type="email" name="correo" placeholder="Write your e-mail">
+                    </div>
+                </div>
+                <div class="fila-formulario">
+                    <div class="campo-formulario">
+                        <h5 class="sin-margen">My proyect's name is...</h5>
+                        <input type="text" name="proyecto" placeholder="Write your proyect's name">
+                    </div>
+                    <div class="campo-formulario">
+                        <h5 class="sin-margen">My phone number is...</h5>
+                        <input type="tel" name="telefono" placeholder="Write your number">
+                    </div>
+                </div>
+                <div class="campo-formulario">
+                    <h5 class="sin-margen">And I want to...</h5>
+                    <textarea name="mensaje" placeholder="Write your idea or a description of your proyect"></textarea>
+                </div>
+                <button type="submit">enviar</button>
+            </form>
+        </section>
+        <h5>*don't get scared if I respond too fast!</h5>
+    </main>
+</body>
+<footer>
+    <div class="footer-top">
+        <a href="index.html">
+            <img src="img/logo.svg" alt="Logo" class="logo">
+        </a>
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
+
+</html>
