--- a/cult-of-horror-festival.html
+++ b/cult-of-horror-festival.html
@@ -6,20 +6,132 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <section class="pagina-proyecto">
+                <div class="contenedor-texto">
+                    <h3>
+                        Cult of
+                        <span class="contenedor-superpuesto">
+                            <span class="texto-raleway">Horror</span>
+                            <span class="texto-noculture">Horror</span>
+                        </span><br>
+                        Festival
+                    </h3>
+                    <img src="img/forma-b.svg" alt="" class="forma-roja">
+                </div>
+
+                <div class="linea-separadora"></div>
+
+                <h5>/festival identity /brochure design /editorial design </h5>
+                <div class="imagen-poster">
+                    <img src="img/festival-cultofhorror.jpg" alt="Picture of a brochure for a Horror Movie Festival"
+                        class="imagen-poster">
+                </div>
+            </section>
+            <section class="contenedor-detalles">
+                <div class="columna texto-descriptivo">
+                    <p>
+                        One of the challenges of this assignment was designing a brochure with twelve slots to showcase
+                        a wide range of festival activities and events, as well as information about the location and
+                        overall theme. It was very interesting to experiment with typography and different font
+                        variations to make the brochure more visually engaging and easier to understand.
+                    </p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>course</span>
+                    <p>typography 3</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>teacher</span>
+                    <p>Aldo De Losa</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>year realized</span>
+                    <p>2024</p>
+                </div>
+            </section>
+        </section>
+        <section>
+            <div class="subtitulo">
+                <img src="img/asterisco.svg" alt="asterisco">
+                <h4>more of this proyect</h4>
+            </div>
+            <div class="galeria">
+                <div class="galeria-item"><img src="img/cult-full.jpg"
+                        alt="Picture of a brochure for Cult of Horror Fest"></div>
+                <div class="galeria-item"><img src="img/cult-closeup.jpg"
+                        alt="Picture of a brochure for Cult of Horror Fest, close up"></div>
+            </div>
+            <div class="ver-galeria-trabajos">
+                <h4>want to see more of my works?</h4>
+                <a href="my-work.html" target="_blank" rel="noopener">
+                    <img src="img/flecha.svg" alt="flecha"></a>
+            </div>
+        </section>
+        <section class="work-section">
+            <div class="work-content">
+                <h3>
+                    LET'S
+                    <span class="work-wrapper">
+                        <span class="work-raleway">WORK</span>
+                        <span class="work-noculture">WORK</span>
+                    </span>
+                    TOGETHER!
+                </h3>
+                <h4>got a project or you want to collaborate?</h4>
+                <button class="boton">
+                    <a href="contact-me.html">Contact me</a>
+                </button>
+            </div>
+        </section>
+    </main>
+</body>
+<footer>
+    <div class="footer-top">
+        <a href="index.html">
+            <img src="img/logo.svg" alt="Logo" class="logo">
+        </a>
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
+
+</html>
