--- a/untu-center.html
+++ b/untu-center.html
@@ -6,20 +6,156 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <section class="pagina-proyecto">
+                <div class="contenedor-texto">
+                    <h3>
+                        UNTU South Africa<br>
+                        Cultural
+                        <span class="contenedor-superpuesto">
+                            <span class="texto-raleway">Center</span>
+                            <span class="texto-noculture">Center</span>
+                        </span>
+                    </h3>
+                    <img src="img/forma-c.svg" alt="" class="forma-roja">
+                </div>
+
+                <div class="linea-separadora"></div>
+
+                <h5>/festival identity /identity design /poster design </h5>
+                <div class="imagen-poster">
+                    <img src="img/centro-untu.jpg" alt="Multiple Posters from South Africa Cultural Center UNTU">
+                </div>
+            </section>
+
+            <section class="contenedor-detalles">
+                <div class="columna texto-descriptivo">
+                    <p>
+                        Before this project, I knew very little about South Africa. Throughout the process, I learned
+                        about the country's strength, optimism, and the richness of its traditions and cultures. I
+                        really tried to capture the spirit of this beautiful country and its diverse tribes through
+                        typography, color, and abstract illustrations. I even found myself creating my own typography to
+                        represent it authentically. Designing such a large system and ensuring that all the pieces felt
+                        cohesive was a big challenge, but the final result made me really happy.
+                    </p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>course</span>
+                    <p>design workshop 3</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>teacher</span>
+                    <p>Esteban Ibarra</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>year realized</span>
+                    <p>2024</p>
+                </div>
+            </section>
+        </section>
+        <section>
+            <div class="subtitulo">
+                <img src="img/asterisco.svg" alt="asterisco">
+                <h4>more of this proyect</h4>
+            </div>
+            <div class="grid-wrapper">
+                <div class="column">
+                    <img src="img/untu-bocetos.jpg" alt="PDoodles of the process">
+                    <img src="img/untu-letras.jpg" alt="Doodles of the process">
+                </div>
+                <div class="column">
+                    <img src="img/untu-boceto.jpg" alt="Doodles of the process">
+                    <img src="img/untu-alfabeto.jpg" alt="Doodles of the process">
+                </div>
+            </div>
+            <div class="imagen-poster">
+                <img src="img/untu-afiches.jpg" alt="Multiple Posters from South Africa Cultural Center UNTU">
+            </div>
+            <section class="more-works">
+                <img src="img/forma-b.svg" alt="" class="forma-fondo">
+                <div class="grid-wrapper">
+                    <div class="column">
+                        <img src="img/untu-crono.jpg" alt="Festival cronogram">
+                        <img src="img/untu-cronograma.jpg" alt="Close up cronogram festival">
+                    </div>
+                    <div class="column">
+                        <img src="img/untu-remera.jpg" alt="Staff tshirt">
+                        <img src="img/untu-institucional.jpg" alt="Poster displayed on a Billboard">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="ver-galeria-trabajos">
+                    <h4>want to see more of my works?</h4>
+                    <a href="my-work.html" target="_blank" rel="noopener">
+                        <img src="img/flecha.svg" alt="flecha"></a>
+                </div>
+            </section>
+        </section>
+        <section class="work-section">
+            <div class="work-content">
+                <h3>
+                    LET'S
+                    <span class="work-wrapper">
+                        <span class="work-raleway">WORK</span>
+                        <span class="work-noculture">WORK</span>
+                    </span>
+                    TOGETHER!
+                </h3>
+                <h4>got a project or you want to collaborate?</h4>
+                <button class="boton">
+                    <a href="contact-me.html">Contact me</a>
+                </button>
+            </div>
+        </section>
+    </main>
+</body>
+<footer>
+    <div class="footer-top">
+        <a href="index.html">
+            <img src="img/logo.svg" alt="Logo" class="logo">
+        </a>
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
+
+</html>
