--- a/about-me.html
+++ b/about-me.html
@@ -6,20 +6,191 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section class="titulo-principal">
+            <div>
+                <h1 class="titulo-noculture">who<br> am i??</h1>
+                <h1 class="titulo-raleway">who<br> am i??</h1>
+            </div>
+            <div class="titulo-imagen">
+                <img src="img/forma-c-reflejo.svg" alt="forma decorativa" class="forma-roja-c">
+                <img src="img/foto-perfil.png" alt="foto de Sofito" class="foto-perfil">
+            </div>
+        </section>
+        <section>
+            <div class="texto-principal">
+                <p>I'm <span>Sofía Zambrana</span>, but everyone calls me Sofito because I come in a small-sized
+                    package. I'm always buzzing around, trying new things, experimenting, and never getting tired of it.
+                    I'm really into branding, editorial design, and posters: basically anywhere I can mix up concepts,
+                    shapes, and a bit of creative chaos. Even though that might sound a little wild, I'm actually super
+                    chill and easy going. But when it's time to work, I'm all in and I give it everything I've got :D
+                </p>
+            </div>
+            <h5>/creative /curious /perseverant /enthusiastic /experimental /versatile </h5>
+        </section>
+        <section class="sobre-mi">
+            <div class="sobre-mi-contenido">
+
+                <div class="sobre-mi-visual">
+                    <div class="album-favorito">
+                        <h5 class="sin-margen">my favorite album right now!</h5>
+                        <iframe style="border-radius:12px"
+                            src="https://open.spotify.com/embed/album/2PFJKjBqXpYrRcdClhfcnX?utm_source=generator&theme=0"
+                            width="100%" height="200" frameborder="0" allowfullscreen=""
+                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                            loading="lazy"></iframe>
+                    </div>
+                    <div class="galeria-mascotas">
+                        <h5 class="sin-margen">my pets!</h5>
+                        <input type="radio" name="slider" id="slide1" checked>
+                        <input type="radio" name="slider" id="slide2">
+                        <input type="radio" name="slider" id="slide3">
+                        <input type="radio" name="slider" id="slide4">
+                        <input type="radio" name="slider" id="slide5">
+                        <input type="radio" name="slider" id="slide6">
+                        <input type="radio" name="slider" id="slide7">
+                        <input type="radio" name="slider" id="slide8">
+
+                        <div class="arrows">
+                            <div class="arrow-left">
+                                <label for="slide8" class="prev prev1">&#8592;</label>
+                                <label for="slide1" class="prev prev2">&#8592;</label>
+                                <label for="slide2" class="prev prev3">&#8592;</label>
+                                <label for="slide3" class="prev prev4">&#8592;</label>
+                                <label for="slide4" class="prev prev5">&#8592;</label>
+                                <label for="slide5" class="prev prev6">&#8592;</label>
+                                <label for="slide6" class="prev prev7">&#8592;</label>
+                                <label for="slide7" class="prev prev8">&#8592;</label>
+                            </div>
+                            <div class="imagenes">
+                                <img src="img/mascota-1.jpg" alt="Mascota 1" class="img1">
+                                <img src="img/mascota-2.jpg" alt="Mascota 2" class="img2">
+                                <img src="img/mascota-3.jpg" alt="Mascota 3" class="img3">
+                                <img src="img/mascota-4.jpg" alt="Mascota 4" class="img4">
+                                <img src="img/mascota-5.jpg" alt="Mascota 5" class="img5">
+                                <img src="img/mascota-6.jpg" alt="Mascota 6" class="img6">
+                                <img src="img/mascota-7.jpg" alt="Mascota 7" class="img7">
+                                <img src="img/mascota-8.jpg" alt="Mascota 8" class="img8">
+                            </div>
+                            <div class="arrow-right">
+                                <label for="slide1" class="next next8">&#8594;</label>
+                                <label for="slide2" class="next next1">&#8594;</label>
+                                <label for="slide3" class="next next2">&#8594;</label>
+                                <label for="slide4" class="next next3">&#8594;</label>
+                                <label for="slide5" class="next next4">&#8594;</label>
+                                <label for="slide6" class="next next5">&#8594;</label>
+                                <label for="slide7" class="next next6">&#8594;</label>
+                                <label for="slide8" class="next next7">&#8594;</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sobre-mi-texto">
+                <div class="texto-full">
+                    <h4>studies</h4>
+                    <p>
+                        <span>Universidad Nacional de Lanús</span><br>
+                        Comunicación Visual - Diseño Gráfico y Visual
+                    </p>
+                    <p>
+                        <span>Instituto de Cultura Nuestra Señora de Lourdes</span><br>
+                        Técnico Superior en Economía y Administración
+                    </p>
+                </div>
+                <div>
+                    <h4>my habilities</h4>
+                    <ul class="habilidades">
+                        <li><img src="img/photoshop.svg" alt="Photoshop"> Photoshop (pretty good!)</li>
+                        <li><img src="img/illustrator.svg" alt="Illustrator"> Illustrator (very good!)</li>
+                        <li><img src="img/indesign.svg" alt="InDesign"> InDesign (good!)</li>
+                        <li><img src="img/lightroom.svg" alt="Lightroom"> Lightroom (just started!)</li>
+                        <li><img src="img/figma.svg" alt="Figma"> Figma (good enough!)</li>
+                    </ul>
+                </div>
+                <div>
+                    <h4>my experiences</h4>
+                    <p>
+                        <span>Freelance Designer</span><br>
+                        Experiencia en branding, diseño editorial y diseño gráfico.<br>
+                        Trabajo con clientes independientes y emprendedores.
+                    </p>
+                    <p>
+                        <span>Community Manager</span><br>
+                        Gestión de redes sociales, planificación de contenido, campañas y engagement.
+                    </p>
+                </div>
+                <div>
+                    <h4>languages</h4>
+                    <p>
+                        Spanish (native)<br>
+                        English (B2)<br>
+                        Dutch (A1)
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="work-section">
+            <div class="work-content">
+                <h3>
+                    LET'S
+                    <span class="work-wrapper">
+                        <span class="work-raleway">WORK</span>
+                        <span class="work-noculture">WORK</span>
+                    </span>
+                    TOGETHER!
+                </h3>
+                <h4>got a project or you want to collaborate?</h4>
+                <a href="contact-me.html" class="boton">Contact me</a>
+            </div>
+        </section>
+    </main>
+</body>
+<footer>
+    <div class="footer-top">
+        <a href="index.html">
+            <img src="img/logo.svg" alt="Logo" class="logo">
+        </a>
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
+
+</html>
