--- a/environmental-poster.html
+++ b/environmental-poster.html
@@ -6,54 +6,129 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo" class="logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <section>
-            <h3>Environmental Awareness Poster</h3>
-            <h5>/poster design</h5>
-            <img src="img/afiche-ambiente.jpg" alt="Poster of a pinguine made with plastic bags">
-            <div>
-                <p>Our world as we know it's constantly changing for the worse, and it's our fault. One of the problems
-                    I wanted to talk about is how the habitat of certain penguins in the Patagonia is being compromised
-                    by our own trash. It has been found that these penguins are living among plastic waste, including
-                    the common“reusable” plastic bags from supermarkets. How much longer do we have to wait until
-                    everyone sees how big of a deal this really is?</p>
-                <span>course</span>
-                <p>design workshop 2</p>
-                <span>teacher</span>
-                <p>Javier Reboursin</p>
-                <span>year</span>
-                <p>2023</p>
-            </div>
+            <section class="pagina-proyecto">
+                <div class="contenedor-texto">
+                    <h3>
+                        Environmental<br>
+                        Awareness <span class="contenedor-superpuesto">
+                            <span class="texto-raleway">Poster</span>
+                            <span class="texto-noculture">Poster</span>
+                        </span>
+                    </h3>
+                    <img src="img/forma-a-roja.svg" alt="" class="forma-roja">
+                </div>
+                <div class="linea-separadora"></div>
+                <h5>/poster design</h5>
+                <div class="imagen-poster">
+                    <img src="img/afiche-ambiente.jpg" alt="Poster of a pingüino hecho con bolsas plásticas">
+                </div>
+            </section>
+            <section class="contenedor-detalles">
+                <div class="columna texto-descriptivo">
+                    <p>
+                        Our world as we know it's constantly changing for the worse, and it's our fault. One of the
+                        problems I wanted to talk about is how the habitat of certain penguins in the Patagonia is being
+                        compromised by our own trash. It has been found that these penguins are living among plastic
+                        waste, including the common “reusable” plastic bags from supermarkets. How much longer do we
+                        have to wait until everyone sees how big of a deal this really is?
+                    </p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>course</span>
+                    <p>design workshop 2</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>teacher</span>
+                    <p>Javier Reboursin</p>
+                </div>
+                <div class="columna info-proyecto">
+                    <span>year realized</span>
+                    <p>2023</p>
+                </div>
+            </section>
         </section>
         <section>
-            <div>
-                <h5>want to see more of my work?</h5>
+            <div class="subtitulo">
+                <img src="img/asterisco.svg" alt="asterisco">
+                <h4>artwork displayed at MUD <br>
+                    (Museo Universitario de diseño)</h4>
             </div>
-            <div>
-                <img src="img/afiche-mud.jpg" alt="Poster of a pinguine made with plastic bags in a exhibition">
-                <img src="img/afiche-mud2.jpg" alt="Poster of a pinguine made with plastic bags in a exhibition">
+            <div class="galeria">
+                <div class="galeria-item"><img src="img/afiche-mud.jpg"
+                        alt="Poster of a pinguine made with plastic bags in a exhibition"></div>
+                <div class="galeria-item"><img src="img/afiche-mud2.jpg"
+                        alt="Poster of a pinguine made with plastic bags in a exhibition"></div>
+            </div>
+            <div class="ver-galeria-trabajos">
+                <h4>want to see more of my works?</h4>
+                <a href="my-work.html" target="_blank" rel="noopener">
+                    <img src="img/flecha.svg" alt="flecha"></a>
             </div>
         </section>
-
+        <section class="work-section">
+            <div class="work-content">
+                <h3>
+                    LET'S
+                    <span class="work-wrapper">
+                        <span class="work-raleway">WORK</span>
+                        <span class="work-noculture">WORK</span>
+                    </span>
+                    TOGETHER!
+                </h3>
+                <h4>got a project or you want to collaborate?</h4>
+                <button class="boton">
+                    <a href="contact-me.html">Contact me</a>
+                </button>
+            </div>
+        </section>
     </main>
 </body>
+<footer>
+    <div class="footer-top">
+        <img src="img/logo.svg" alt="Logo" class="logo">
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
 
 </html>
