--- a/my-work.html
+++ b/my-work.html
@@ -6,20 +6,104 @@
     <title>Sofito Portfolio 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="webfonts/no-culture-no-soul-demo.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="stylesheet" href="https://use.typekit.net/uil4fsh.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/snp6oma.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg"> -->
+    <link rel="icon" type="image/svg+xml" href="img/logo.svg">
 </head>
 
 <body>
     <header>
         <nav>
-            <p><a href="#about me">about me</a></p>
-            <p><a href="#my work">my work</a></p>
-            <p><a href="contact me">contact me</a></p>
+            <div>
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logo">
+                </a>
+            </div>
+            <ul>
+                <li><a href="about-me.html">About me</a></li>
+                <li><a href="my-work.html">My works</a></li>
+                <li><a href="contact-me.html">Contact me</a></li>
+            </ul>
         </nav>
     </header>
+    <main>
+        <section class="titulo-principal">
+            <h1 class="titulo-noculture">mY <br>wOrks !!</h1>
+            <h1 class="titulo-raleway">my <br>works !!</h1>
+        </section>
+        <section>
+            <div class="texto-principal">
+                <p>Welcome to my little universe of projects: from school stuff I poured my soul into, to wild
+                    real-life adventures I somehow got lucky enough to be part of. Think of it as a scrapbook of
+                    creative chaos, clever ideas, late-night design sprints, and a lot of <span>caffeine</span>. Each
+                    piece has its
+                    own weird little story, and honestly, I wouldn't have it any other way. So go ahead, poke around,
+                    it's all me!
+                </p>
+            </div>
+
+            <h5>/poster design /branding /festival identity /editorial design </h5>
+        </section>
+        <section class="more-works">
+            <img src="img/forma-b.svg" alt="" class="forma-fondo-mistrabajos">
+            <div class="grid-wrapper">
+                <div class="column">
+                    <img src="img/cult-full-galeria.jpg" alt="Cult of Horror Festival">
+                    <img src="img/festival-tnc.jpg" alt="Festival TNC">
+                    <img src="img/limkraf-galeria.jpg" alt="Limkraf Bakery">
+                    <img src="img/somnia-revista.jpg" alt="Somnia Magazine">
+                </div>
+                <div class="column">
+                    <img src="img/afiche-ambiente-galeria.jpg" alt="Environmental Awareness Poster">
+                    <img src="img/metropolitan.jpg" alt="Metropolitan bottle">
+                    <img src="img/untu-institucional.jpg" alt="UNTU South Africa Cultural Center">
+                    <img src="img/arrabalera.jpg" alt="Arrabalera Proyect">
+                </div>
+            </div>
+        </section>
+        <section class="work-section">
+            <div class="work-content">
+                <h3>
+                    LET'S
+                    <span class="work-wrapper">
+                        <span class="work-raleway">WORK</span>
+                        <span class="work-noculture">WORK</span>
+                    </span>
+                    TOGETHER!
+                </h3>
+                <h4>got a project or you want to collaborate?</h4>
+                <button class="boton">
+                    <a href="contact-me.html">Contact me</a>
+                </button>
+            </div>
+        </section>
+    </main>
+</body>
+<footer>
+    <div class="footer-top">
+        <a href="index.html">
+            <img src="img/logo.svg" alt="Logo" class="logo">
+        </a>
+        <nav class="footer-nav">
+            <a href="about-me.html">About me</a>
+            <a href="my-work.html">My works</a>
+            <a href="contact-me.html">Contact me</a>
+        </nav>
+        <a href="#top" class="scroll-up">↑</a>
+    </div>
+    <div class="footer-division"></div>
+    <div class="footer-bottom">
+        <p>Copyright © 2025 Sofia Zambrana - All rights reserved</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/sofothemonster/" target="_blank" rel="noopener">
+                <img src="img/instagram.svg" alt="Instagram">
+            </a>
+            <a href="https://www.behance.net/sofiazambrana" target="_blank" rel="noopener">
+                <img src="img/behance.svg" alt="Behance">
+            </a>
+        </div>
+    </div>
+</footer>
+
+</html>
